fix header on mobile

--- a/files.net-hesten.dk/style/scss/_responsive_styles.scss
+++ b/files.net-hesten.dk/style/scss/_responsive_styles.scss
@@ -86,6 +86,13 @@
 	}
 
 	body {
+		#top_banner {
+			height: 150px;
+			img {
+				height: 150px;
+				width: auto;
+			}
+		}
 		#left_menu a:nth-child(2n) {
 			top: auto;
 		}
